--- a/Notas/Views/Estudiante/VerEstudiantes.cshtml
+++ b/Notas/Views/Estudiante/VerEstudiantes.cshtml
@@ -6,47 +6,42 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>VerEstudiantes</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 </head>
 <body>
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.apellido2)
-            </th>
-            <th></th>
-        </tr>
+    <div class="table-responsive-sm">
+        <table class="table table-hover table-bordered table-striped table-sm">
+            <tr class="bg-primary">
+                <th style="color: white;">
+                    Carné
+                </th>
+                <th style="color: white;">
+                    Nombre del estudiante
+                </th>
+                <th>
 
-        @foreach (var item in Model)
-        {
-        
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.nombre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.apellido)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.apellido2)
-                </td>
-                <td>
-
-                    @Html.ActionLink("Edit", "Edit", new { id = item.carne }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.carne }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.carne })
-                </td>
+                </th>
             </tr>
-        }
 
-    </table>
+            @foreach (var item in Model)
+            {
+                <tr class="" style="text-align: center;">
+                    <td>
+                        @Html.DisplayFor(modelItem => item.carne)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.nombreCompleto)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Details", "Details", new { id = item.carne })" class="btn btn-primary" role="button">Evaluaciones</a>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+    <p>
+        <a href="@Url.Action("CrearEstudiante", "Estudiante")" class="btn btn-primary" role="button">Agregar estudiante</a>
+    </p>
 </body>
 </html>
