Modelos ya fijos sin entitty framework falta editar cada rubro y calcular nota final

--- a/Notas/Views/Evaluacion/VerEvaluacion.cshtml
+++ b/Notas/Views/Evaluacion/VerEvaluacion.cshtml
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 </head>
 <div class="table-responsive-sm">
-    <table class="table table-hover table-bordered table-striped table-sm">
+    <table class="table table-hover table-bordered table-sm">
         <tr class="bg-primary">
             <th style="color: white;">
                 Rubro
@@ -42,6 +42,30 @@
 
         <tr class="" style="text-align: left;">
             <td>
+                @Html.DisplayNameFor(model => model.notasLaboratorios)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.notasLaboratorios)
+            </td>
+            <td>
+                <a href="@Url.Action("VerEvaluacion", "Evaluacion", new { carne = ViewBag.carne })" class="btn btn-primary" role="button">Evaluaciones</a>
+            </td>
+        </tr>
+
+        <tr class="" style="text-align: left;">
+            <td>
+                @Html.DisplayNameFor(model => model.notasExamenes)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.notasExamenes)
+            </td>
+            <td>
+                <a href="@Url.Action("VerEvaluacion", "Evaluacion", new { carne = ViewBag.carne })" class="btn btn-primary" role="button">Evaluaciones</a>
+            </td>
+        </tr>
+
+        <tr class="" style="text-align: left;">
+            <td>
                 @Html.DisplayNameFor(model => model.participacionForos)
             </td>
             <td>
@@ -54,10 +78,10 @@
 
         <tr class="" style="text-align: left;">
             <td>
-                @Html.DisplayNameFor(model => model.notainvestigacion)
+                @Html.DisplayNameFor(model => model.notaInvestigacion)
             </td>
             <td>
-                @Html.DisplayFor(model => model.notainvestigacion)
+                @Html.DisplayFor(model => model.notaInvestigacion)
             </td>
             <td>
                 <a href="@Url.Action("VerEvaluacion", "Evaluacion", new { carne = ViewBag.carne })" class="btn btn-primary" role="button">Evaluaciones</a>
