--- a/Notas/Views/Estudiante/VerEstudiantes.cshtml
+++ b/Notas/Views/Estudiante/VerEstudiantes.cshtml
@@ -1,13 +1,17 @@
 ﻿@model IEnumerable<Notas.Models.EstudianteModel>
 
-<!DOCTYPE html>
+@{
+    /**/
 
-<html>
+    ViewBag.Title = "CCQT";
+}
+
+<h2>Estudiantes del curso</h2>
+<hr />
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>VerEstudiantes</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="table-responsive-sm">
