--- a/Notas/Views/Evaluacion/VerEvaluacion.cshtml
+++ b/Notas/Views/Evaluacion/VerEvaluacion.cshtml
@@ -1,18 +1,16 @@
 ﻿@model Notas.Models.EvaluacionModel
 
 @{
-    ViewBag.Title = "VerEvaluacion";
+    /**/
+
+    ViewBag.Title = "CCQT";
 }
 
 <h2>Evaluaciones del estudiante con carné @ViewBag.carne</h2>
-<hr />
-
-
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>VerEstudiantes</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <div class="table-responsive-sm">
     <table class="table table-hover table-bordered table-sm">
@@ -59,7 +57,7 @@
                 @Html.DisplayFor(model => model.notaParciales)
             </td>
             <td>
-                <a href="@Url.Action("EditarParciales", "Evaluacion", new { carne = ViewBag.carne })" class="btn btn-primary" role="button">Evaluaciones</a>
+                <a href="@Url.Action("EditarExamenes", "Evaluacion", new { carne = ViewBag.carne })" class="btn btn-primary" role="button">Evaluaciones</a>
             </td>
         </tr>
 
@@ -92,6 +90,5 @@
     <a href="@Url.Action("CrearEstudiante", "Estudiante")" class="btn btn-primary" role="button">Agregar estudiante</a>
 </p>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.evaluacionId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </p>
