--- a/Notas/Views/Home/Index.cshtml
+++ b/Notas/Views/Home/Index.cshtml
@@ -1,71 +1,15 @@
-﻿<head>
-    <title>Página de inicio: Comunidades de práctica</title>
+﻿@{
+    /**/
+
+    ViewBag.Title = "Home";
+}
+
+<h2>Hacer click en curso</h2>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
-<body>
-
-
-    <div class="row " style="height:100%;">
-        <div class="col-md-6" style="height:100%;">
-
-            <div class="box-container-generic" style="height:45%;">
-                <div class="shadow" style="height:100%;">
-                    <div class="box-header row">
-                        <div class="box-header-title">Artículos publicados</div>
-                    </div>
-                    <div class="box-content" style="padding: 20px; height:72%;">
-                        <p>
-                            Aquí puede acceder a la lista de artículos publicados por nuestros autores en la plataforma
-                        </p>
-                    </div>
-                    <div class="box-footer">
-                        <p><a class="btn box-btn" href="https://localhost:44392/Articulo/InicioArticulos">Ver artículos &raquo;</a></p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="box-container-generic" style="height:50%;">
-                <div class="shadow" style="height:100%;">
-                    <div class="box-header row">
-                        <div class="box-header-title">Preguntas frecuentes</div>
-                    </div>
-                    <div class="box-content" style="padding: 20px; height:75%;">
-                        <p>
-                            Si tiene alguna pregunta busque en nuestro FAQ.
-                        </p>
-                    </div>
-                    <div class="box-footer">
-                        <p><a class="btn box-btn" href="https://localhost:44392/faq/FAQ">FAQ &raquo;</a></p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="col-md-6" style="height:100%;">
-
-            <div class="box-container-generic" style="height:97%;">
-                <div class="shadow" style="height:100%;">
-                    <div class="box-header row">
-                        <div class="box-header-title">Anuncios</div>
-                    </div>
-                    <div class="box-content" style="padding: 20px; height:93%;">
-                        Aqui se notifcaran eventos nuevos.
-                    </div>
-                    <div class="box-footer">
-
-                    </div>
-                </div>
-
-
-
-            </div>
-
-        </div>
-
-    </div>
-
-</body>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
