--- a/Notas/Views/Evaluacion/VerEvaluacion.cshtml
+++ b/Notas/Views/Evaluacion/VerEvaluacion.cshtml
@@ -7,6 +7,14 @@
 }
 
 <h2>Evaluaciones del estudiante con carné @ViewBag.carne</h2>
+@{
+    if (ViewBag.mensaje != null)
+    {
+        <div class="text-success">
+            @ViewBag.mensaje
+        </div>
+    }
+}
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
