--- a/Notas/Views/Evaluacion/EditarExamenes.cshtml
+++ b/Notas/Views/Evaluacion/EditarExamenes.cshtml
@@ -21,7 +21,7 @@
                 <div class="col-md-12">
                     <div class="form-group" id="examenes">
                         <label for="notasExamenes">Primer examen</label>
-                        <input class="form-control" name="notas" type="number" min="0" max="100" /><br />
+                        <input class="form-control" name="notas" type="number" min="0" max="100" required value="0" /><br />
                     </div>
                     <div class="form-group" id="examenes">
                         <label for="notasExamenes">Segundo examen</label>
